# pbr

./: .gitignore  CMakeLists.txt  main.cpp
src/app/: CMakeLists.txt  main.cpp
src/app/cameras/: simplePinholeCamera.cpp  simplePinholeCamera.h
src/app/core/: Scene.cpp  Scene.h  camera.cpp  camera.h  core.cpp  image.h  ray.cpp  ray.h  scene.cpp  scene.h  shape.cpp  shape.h
src/app/shapes/: sphere.cpp  sphere.h  triangle.cpp  triangle.h
